# ChatFS

./: .env.example  .gitignore  INTEGRATION.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/: package.json  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: BackendStatus.tsx  ChatWindow.tsx  CommandPalette.tsx  EmojiPicker.tsx  LoadingShimmer.tsx  Message.tsx  MessageReactions.tsx  ModelSelector.tsx  Sidebar.tsx  Toast.tsx
frontend/src/context/: EmojiPickerContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useBackendStatus.ts  useFileContent.ts  useSemanticSearch.ts  useSidebarState.ts  useToast.ts
frontend/src/types/: message.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  embedding.rs  lib.rs  main.rs  vector_store.rs
